--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
             if [ -f "$dir/package.json" ]; then
               cd $dir
               npm install 
-              npm run build -- --no-export
+              npm run build -- --download=false
               mv dist ../_site/${dir%/}
               cd ..
             fi
