--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,63 @@
-name: Deploy Slides
+name: Deploy Slides to GitHub Pages
 
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 24
+          node-version: 'lts/*'
 
-      - name: Build all slides
+      - name: Build all Slidev decks
         run: |
+          mkdir -p _site
           for dir in */; do
             if [ -f "$dir/package.json" ]; then
-              cd $dir
-              npm install 
-              npm run build -- --download=false
-              mv dist ../_site/${dir%/}
+              cd "$dir"
+              npm install
+              # 构建时禁用 PDF 导出；定义正确的 base 路径（./$dir/）
+              npm run build -- --download=false --base "/${{ github.event.repository.name }}/${dir%/}/"
+              mv dist "../_site/${dir%/}"
               cd ..
             fi
           done
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload site artifacts
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./_site
+          path: _site
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
